--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015-native-modules": "^6.9.4",
     "css-loader": "^0.19.0",
+    "eslint": "^4.7.1",
+    "eslint-plugin-react": "^7.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
